# GraphLensPrototype

./: .env.example  .gitignore  README.md  extract_kg.py  load_to_neo4j.py  pyproject.toml  requirements.txt  results.json
docs/: WP2_corpus_collection_guide.md
graphlens/: __init__.py  extractor.py  neo4j_loader.py  scraper.py
graphlens/ml/: __init__.py  graph_builder.py  link_prediction.py
notebooks/: link_prediction.ipynb
scripts/: combine_chunks.py  extract_kg.py  load_to_neo4j.py  predict_links.py  scrape_kg.py
