[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphlens"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.92.0",
    "neo4j>=5.0.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Embedding-based link prediction
ml = [
    "pykeen>=1.10",
    "torch>=2.0",
]
# GNN-based methods via PyTorch Geometric
pyg = [
    "torch>=2.0",
    "torch-geometric>=2.4",
]
# All optional extras
all = [
    "graphlens[ml]",
    "graphlens[pyg]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphlens*"]